--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,6 +1,6 @@
 $primary-font: 'Roboto', sans-serif;
 $accent-color: #ff6b08;
-$alert-color: #ff001b;
+$error-color: #ff001b;
 $primary-font-size: 12px;
 $font-size-logo: 30px;
 $header-text-color: #ffffff;
