--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap'); // Fonts Roboto 400, 500
+
 $primary-font: 'Roboto', sans-serif;
 $accent-color: #ff6b08;
 $error-color: #ff001b;
