--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -2,6 +2,10 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  font-family: $primary-font;
+}
+
 *,
 *::before,
 *::after {
@@ -21,8 +25,4 @@ a {
 
 button {
   cursor: pointer;
-}
-
-body {
-  color: $accent-color;
 }
