--- a/src/sass/layouts/_my-lib.scss
+++ b/src/sass/layouts/_my-lib.scss
@@ -1,6 +1,6 @@
-.hidden {
-  display: none;
-}
+// .hidden {
+//   display: none;
+// }
 
 .my-library {
   padding-top: 20px;
@@ -62,6 +62,7 @@
   display: block;
   margin-bottom: 10px;
   height: 398px;
+
   border-radius: 5px;
 
   @media screen and (min-width: 320px) {
@@ -86,12 +87,15 @@
 
 .my-library__movie-info {
   margin-right: 10px;
+
   color: $accent-color;
 }
 
 .my-library__movie-rate {
   padding: 1px 10px;
+
   line-height: 1.16;
+
   color: $header-text-color;
   background-color: $accent-color;
   border-radius: 5px;
