--- a/src/js/templates/my-library.hbs
+++ b/src/js/templates/my-library.hbs
@@ -2,7 +2,7 @@
 <li class="my-library__item">
     <img class="my-library__movie-poster" src="https://image.tmdb.org/t/p/w500{{this.poster_path}}" alt="">
     <p class="my-library__movie-title">{{title}} {{name}}</br>
-        <span class="my-library__movie-info">Drama, Action | {{first_air_date}} {{release_date}}</span>
+        <span class="my-library__movie-info">{{genre_ids}} | {{first_air_date}} {{release_date}}</span>
         <span class="my-library__movie-rate">{{vote_average}}</span>
     </p>
 </li>
