--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -1,131 +1,179 @@
 .modal {
+  width: 100vw;
   overflow-y: scroll;
   background-color: rgb(211, 226, 217);
 }
 
 // Section
 .modal-section {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
   width: 100%;
   height: 100vh;
-  padding: 20px;
 
+  @media screen and (max-width: 767px) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 60px;
+  }
+
+  // Container
+  .modal-container {
+    @media screen and (min-width: 320px) {
+      width: 280px;
+    }
+    @media screen and (min-width: 768px) {
+      width: 618px;
+      display: flex;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 1058px;
+    }
+  }
+
+  // Image
   .modal-section__image {
     margin-bottom: 30px;
     width: 100%;
+
+    @media screen and (min-width: 768px) {
+      margin-right: 30px;
+      width: 294px;
+      height: 416px;
+    }
   }
 
   // Meta
-  .modal-meta__title {
-    margin-bottom: 20px;
-    font-family: $primary-font;
-    text-transform: uppercase;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.15;
-    color: $main-text-color;
-  }
+  .modal-section__meta {
+    .modal-meta__title {
+      margin-bottom: 20px;
+      font-family: $primary-font;
+      text-transform: uppercase;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.15;
+      color: $main-text-color;
 
-  // Info
-  .modal-meta__info {
-    display: flex;
-    margin-bottom: 20px;
+      @media screen and (min-width: 768px) {
+        font-size: 30px;
+        line-height: 1.17;
+      }
+    }
 
-    .modal-info__list {
-      &:nth-child(1) {
-        width: 40%;
+    // Info
+    .modal-meta__info {
+      display: flex;
+      margin-bottom: 20px;
+
+      .modal-info__list {
+        &:nth-child(1) {
+          width: 40%;
+        }
+
+        &:nth-child(2) {
+          width: 60%;
+        }
+
+        & > li {
+          font-family: $primary-font;
+          font-style: normal;
+          font-weight: 500;
+          font-size: 12px;
+          line-height: 1.33;
+          color: $about-text-color;
+
+          &:not(:last-child) {
+            margin-bottom: 10px;
+          }
+        }
+
+        &:nth-child(2) > li {
+          &:not(:first-child) {
+            color: $main-text-color;
+          }
+
+          &:nth-child(1) span:nth-child(1) {
+            display: inline-block;
+            padding: 1px 10px;
+            margin-right: 3px;
+            background: $accent-color;
+            border-radius: 5px;
+            color: $header-text-color;
+          }
+
+          &:nth-child(1) span:nth-child(2) {
+            display: inline-block;
+            padding: 1px 4px;
+            margin-left: 3px;
+            color: $main-text-color;
+            background: $footer-background-color;
+            border-radius: 5px;
+          }
+        }
+
+        &:nth-child(2) > li:nth-child(3) {
+          text-transform: uppercase;
+        }
+      }
+    }
+
+    // Description
+    .modal-meta__title.description {
+      margin-bottom: 10px;
+      font-size: 12px;
+      line-height: 1.33;
+    }
+
+    .modal-meta__text {
+      margin-bottom: 40px;
+      font-family: $primary-font;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 1.67;
+      color: $main-text-color;
+
+      @media screen and (min-width: 768px) {
+        margin-bottom: 20px;
+      }
+    }
+
+    // Buttons
+    .modal-meta__btn-wrap {
+      display: flex;
+      padding-bottom: 40px;
+
+      @media screen and (min-width: 768px) {
+        padding-bottom: 60px;
       }
 
-      &:nth-child(2) {
-        width: 60%;
-      }
-
-      & > li {
+      & > button {
+        width: 50%;
+        padding: 14px 10px 12px;
         font-family: $primary-font;
         font-style: normal;
         font-weight: 500;
         font-size: 12px;
         line-height: 1.33;
-        color: $about-text-color;
-
-        &:not(:last-child) {
-          margin-bottom: 10px;
-        }
-      }
-
-      &:nth-child(2) > li {
-        &:not(:first-child) {
-          color: $main-text-color;
-        }
-
-        &:nth-child(1) span:nth-child(1) {
-          display: inline-block;
-          padding: 1px 10px;
-          margin-right: 3px;
-          background: $accent-color;
-          border-radius: 5px;
-          color: $header-text-color;
-        }
-
-        &:nth-child(1) span:nth-child(2) {
-          display: inline-block;
-          padding: 1px 4px;
-          margin-left: 3px;
-          color: $main-text-color;
-          background: $footer-background-color;
-          border-radius: 5px;
-        }
-      }
-
-      &:nth-child(2) > li:nth-child(3) {
         text-transform: uppercase;
-      }
-    }
-  }
+        border-radius: 5px;
 
-  // Description
-  .modal-meta__title.description {
-    margin-bottom: 10px;
-    font-size: 12px;
-    line-height: 1.33;
-  }
+        &:nth-child(1) {
+          margin-right: 15px;
+          color: $header-text-color;
+          background: #ff6b01;
+          border: none;
+        }
 
-  .modal-meta__text {
-    margin-bottom: 40px;
-    font-family: $primary-font;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.67;
-    color: $main-text-color;
-  }
-
-  // Buttons
-  .modal-meta__btn-wrap {
-    display: flex;
-    padding-bottom: 40px;
-
-    & > button {
-      width: 50%;
-      padding: 14px 10px 12px;
-      font-family: $primary-font;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 12px;
-      line-height: 1.33;
-      text-transform: uppercase;
-      border-radius: 5px;
-
-      &:nth-child(1) {
-        margin-right: 15px;
-        color: $header-text-color;
-        background: #ff6b01;
-        border: none;
-      }
-
-      &:nth-child(2) {
-        color: $main-text-color;
-        border: 1px solid $main-text-color;
+        &:nth-child(2) {
+          color: $main-text-color;
+          border: 1px solid $main-text-color;
+        }
       }
     }
   }
