--- a/src/sass/layouts/_my-lib.scss
+++ b/src/sass/layouts/_my-lib.scss
@@ -21,6 +21,9 @@
   }
 
   @media screen and (min-width: 1024px) {
+    padding-top: 60px;
+    padding-left: 56px;
+    padding-right: 56px;
     width: 1024px;
   }
 }
@@ -34,22 +37,13 @@
 
 .my-library__item {
   @media screen and (min-width: 320px) {
-    padding-bottom: 20px;
-
-    &:last-child {
-      padding-bottom: 40px;
-    }
+    margin-bottom: 20px;
   }
 
   @media screen and (min-width: 768px) {
-    padding-bottom: 30px;
-
+    margin-bottom: 0;
     width: calc((100% - 2 * 30px) / 2);
     margin: 15px;
-
-    &:last-child {
-      padding-bottom: 50px;
-    }
   }
 
   @media screen and (min-width: 1024px) {
@@ -70,11 +64,11 @@
   }
 
   @media screen and (min-width: 768px) {
-    width: 294px;
+    max-width: 294px;
   }
 
   @media screen and (min-width: 1024px) {
-    width: 274px;
+    max-width: 274px;
   }
 }
 
