--- a/src/main.scss
+++ b/src/main.scss
@@ -2,3 +2,4 @@
 @import './sass/base/common';
 @import './sass/layouts/header';
 @import './sass/layouts/modal';
+@import './sass/layouts/modal-film-markup';
