--- a/src/js/templates/mainCards.hbs
+++ b/src/js/templates/mainCards.hbs
@@ -1,10 +1,12 @@
 {{#each this}}
 <li class="film-list-li">
-    <a href="#">
-        <img class="film-list-img" src="https://image.tmdb.org/t/p/w300/{{poster_path}}" alt="{{name}}{{title}}">
+    <a href="#" class="movie-link">
+        <div class="film-list-block-img">
+            <img class="film-list-img" src="https://image.tmdb.org/t/p/w300/{{poster_path}}" alt="{{name}}{{title}}">
+        </div>
         <div class="film-list-movie-description">
             <h3 class="film-list-movie-title">{{upper title}}{{upper name}}</h3>
-            <p class="film-list-movie-genre"> | {{dataEdit first_air_date}}{{dataEdit release_date}}</p>
+            <p class="film-list-movie-genre">Комедия и Аркада | {{dataEdit first_air_date}}{{dataEdit release_date}}</p>
         </div>
         
     </a>
