--- a/src/sass/layouts/_main.scss
+++ b/src/sass/layouts/_main.scss
@@ -1,25 +1,102 @@
-.film-list {
-  .film-list-li {
-    width: 280px;
-    height: 440px;
-  }
-  .film-list-img {
-    width: 100%;
-    height: 400px;
-    border-radius: 5px;
-  }
+.js-section-film {
+  padding-top: 20px;
 }
 
-.film-list-movie-description {
+.film-list-img {
+  max-width: 100%;
+  // max-height: 400px;
+  // border-radius: 5px;
+  display: block;
+  background-size: cover;
+}
+
+.film-list-block-img {
+  overflow: hidden;
+  border-radius: 5px;
+  max-width: 100%;
+  max-height: 403px;
+  margin-bottom: 10px;
+}
+
+.film-list-movie-genre,
+.film-list-movie-title {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-  .film-list-movie-genre {
-    color: #ff6b08;
+}
+.film-list-movie-genre {
+  color: #ff6b08;
+}
+.film-list-movie-title {
+  color: #000000;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+.js-section-film {
+  background-color: aqua;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.movie-link {
+  display: block;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .js-section-film {
+    padding-top: 60px;
   }
-  .film-list-movie-title {
-    color: #000000;
+  .js-section-film {
+    max-width: 768px;
+    padding-left: 75px;
+    padding-right: 75px;
+    padding-bottom: 60px;
+  }
+  .film-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .film-list-li {
+    margin-bottom: 31px;
+    width: 294px;
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0px;
+    }
+  }
+}
+@media screen and (max-width: 767px) {
+  .js-section-film {
+    max-width: 320px;
+    padding-bottom: 40px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .film-list {
+    margin-left: auto;
+    margin-bottom: auto;
+  }
+  .film-list-li {
+    margin-bottom: 0px;
+    max-width: 268px;
+    max-height: 445px;
+    margin-left: auto;
+    margin-right: auto;
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
   }
 }
