--- a/src/sass/layouts/_main.scss
+++ b/src/sass/layouts/_main.scss
@@ -54,15 +54,36 @@
   display: block;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 1024px) {
+  .film-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
   .js-section-film {
+    width: 1024px;
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-bottom: 60px;
     padding-top: 60px;
   }
+
+  .film-list-li {
+    margin-bottom: 31px;
+    width: 274px;
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0px;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .js-section-film {
     max-width: 768px;
     padding-left: 75px;
     padding-right: 75px;
     padding-bottom: 60px;
+    padding-top: 60px;
   }
   .film-list {
     display: flex;
