--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,5 @@
 @import './sass/base/variables';
 @import './sass/base/common';
 @import './sass/layouts/header';
+@import './sass/layouts/header-home';
+@import './sass/layouts/header-library';
