--- a/src/sass/layouts/_header-home.scss
+++ b/src/sass/layouts/_header-home.scss
@@ -1,12 +1,12 @@
 .header-home {
-  background-image: url('../images/bg-home-mob.jpg');
+  background-image: url('/images/bg-home-mob.jpg');
 
   @media screen and (min-width: 768px) {
-    background-image: url('../images/bg-home-tab.jpg');
+    background-image: url('/images/bg-home-tab.jpg');
   }
 
   @media screen and (min-width: 1024px) {
-    background-image: url('../images/bg-home-desk.jpg');
+    background-image: url('/images/bg-home-desk.jpg');
   }
 }
 
@@ -50,7 +50,7 @@
   &::placeholder {
     color: $header-text-color;
     opacity: 1;
-    @include transition(opacity);
+    transition: property 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   &:focus::placeholder {
@@ -67,7 +67,7 @@
   cursor: pointer;
 
   transform: scale(1);
-  @include transition(transform);
+  transition: property 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
@@ -77,10 +77,12 @@
 
 .notification {
   opacity: 0;
-  @include font(400, 14px, 1.17);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.17;
   text-align: left;
   color: $error-color;
-  @include transition(opacity);
+  transition: property 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &.active {
     opacity: 1;
