--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -125,3 +125,15 @@ label {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+
+.visually-hidden {
+  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
