--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -77,6 +77,9 @@ a {
     background-color: #ff6b08;
     border-color: #ff6b08;
     color: #ffffff;
+    background: #ff6b01;
+    box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
+    border-radius: 5px;
   }
 }
 
