damn new things

--- a/src/sass/layouts/_login-signup.scss
+++ b/src/sass/layouts/_login-signup.scss
@@ -6,12 +6,12 @@
 }
 
 /* base styles  */
-* {
-  margin: 0;
-  padding: 0;
-  font-family: 'Nunito', sans-serif;
-  color: var(--primary);
-}
+// * {
+//   margin: 0;
+//   padding: 0;
+//   font-family: 'Nunito', sans-serif;
+//   color: var(--primary);
+// }
 body {
   background: #fafafa;
 }
