--- a/src/main.scss
+++ b/src/main.scss
@@ -6,3 +6,4 @@
 @import './sass/layouts/login-signup';
 @import './sass/layouts/header-home';
 @import './sass/layouts/header-library';
+@import './sass/layouts/scroll-to-top-btn';
