added id on link

--- a/src/js/templates/mainCards.hbs
+++ b/src/js/templates/mainCards.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
 <li class="film-list-li">
-    <a href="#" class="movie-link">
+    <a href="#" class="movie-link" data-id="{{id}}">
         <div class="film-list-block-img">
             <img class="film-list-img" src="https://image.tmdb.org/t/p/w300/{{poster_path}}" alt="{{name}}{{title}}">
         </div>
