шаблон одного фильма для модалки

--- a/src/js/templates/singleFilm.hbs
+++ b/src/js/templates/singleFilm.hbs
@@ -26,7 +26,7 @@
             <li><span>{{vote_average}}</span>/<span>{{vote_count}}</span></li>
             <li>{{popularity}}</li>
             <li>{{original_title}}{{original_name}}</li>
-            <li>{{genre}}</li>
+            <li>{{genre_ids}}</li>
         </ul>
     </div>
     <h3 class="modal-meta__title description">About</h3>
@@ -35,8 +35,5 @@
         <button type="button">add to Watched</button>
         <button type="button">add to queue</button>
     </div>
-    <button class="modal-btn__close" type="button" data-close-modal>
-        x
-    </button>
 </div>
 {{/each}}
