--- a/src/sass/layouts/_my-lib.scss
+++ b/src/sass/layouts/_my-lib.scss
@@ -1,30 +1,31 @@
-// .hidden {
-//   display: none;
-// }
+.hidden {
+  display: none;
+}
 
 .my-library {
-  padding-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  @media screen and (min-width: 320px) {
+    padding-top: 20px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 45px;
+  }
+}
+
+.lib-container {
   margin-left: auto;
   margin-right: auto;
 
   @media screen and (min-width: 320px) {
-    width: 320px;
+    width: 280px;
   }
 
   @media screen and (min-width: 768px) {
-    padding-top: 60px;
-    padding-left: 75px;
-    padding-right: 75px;
-    width: 768px;
+    width: 618px;
   }
 
   @media screen and (min-width: 1024px) {
-    padding-top: 60px;
-    padding-left: 56px;
-    padding-right: 56px;
-    width: 1024px;
+    width: 882px;
   }
 }
 
@@ -64,11 +65,11 @@
   }
 
   @media screen and (min-width: 768px) {
-    max-width: 294px;
+    width: 294px;
   }
 
   @media screen and (min-width: 1024px) {
-    max-width: 274px;
+    width: 274px;
   }
 }
 
