adds NEW modal markup and styles - modalHandler

--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -1,65 +1,120 @@
-// Modal
-
-.modal {
-  // width: 100vw;
-  overflow-y: scroll;
-
-  @media screen and (max-width: 767px) {
-    background-color: $header-text-color;
-  }
+// modalHandler
+:root {
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-duration: 250ms;
 }
 
-// Section
-.modal-section {
+.film {
+  background-color: darkred;
+  width: 80px;
+  height: 150px;
+}
+
+/* Backdrop */
+body.show-modal .backdrop {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial; // изначальные установки (слушать)
+}
+
+body.show-modal .modal {
+  transform: scale(1);
+}
+
+.backdrop {
   display: flex;
   justify-content: center;
-  padding-top: 20px;
-  width: 100%;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
   height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 999;
 
-  @media screen and (max-width: 767px) {
-    padding-left: 20px;
-    padding-right: 20px;
-    height: 100vh;
-  }
-
-  @media screen and (min-width: 768px) {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 768px;
-    height: auto;
-    background-color: $header-text-color;
-  }
-
-  @media screen and (min-width: 1024px) {
-    width: 1024px;
-  }
-
-  // Container
-  .modal-container {
-    @media screen and (min-width: 320px) {
-      width: 280px;
-    }
-    @media screen and (min-width: 768px) {
-      width: 618px;
-      display: flex;
-    }
-    @media screen and (min-width: 1024px) {
-      width: 882px;
-    }
-  }
-
-  // Close modal btn
-  .modal-btn__close {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    border: none;
-    width: 30px;
-    height: 30px;
-    opacity: 0.2;
-  }
+  pointer-events: none; // не дает прокликнуть насквозь
+  opacity: 0;
+  visibility: hidden; // скрывает от читалок
+  transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
 }
+
+.modal {
+  padding: 24px;
+  border-radius: 4px;
+  max-width: 640px;
+  width: 100%;
+  min-height: 320px;
+  background-color: #fff;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+
+  transform: scale(1.1);
+  transition: transform 200ms ease-in-out;
+}
+
+// === 1.0.0
+
+// .modal {
+//   // width: 100vw;
+//   overflow-y: scroll;
+
+//   @media screen and (max-width: 767px) {
+//     background-color: $header-text-color;
+//   }
+// }
+
+// // Section
+// .modal-section {
+//   display: flex;
+//   justify-content: center;
+//   padding-top: 20px;
+//   width: 100%;
+//   height: 100vh;
+
+//   @media screen and (max-width: 767px) {
+//     padding-left: 20px;
+//     padding-right: 20px;
+//     height: 100vh;
+//   }
+
+//   @media screen and (min-width: 768px) {
+//     padding-top: 60px;
+//     padding-bottom: 60px;
+//     margin-left: auto;
+//     margin-right: auto;
+//     width: 768px;
+//     height: auto;
+//     background-color: $header-text-color;
+//   }
+
+//   @media screen and (min-width: 1024px) {
+//     width: 1024px;
+//   }
+
+//   // Container
+//   .modal-container {
+//     @media screen and (min-width: 320px) {
+//       width: 280px;
+//     }
+//     @media screen and (min-width: 768px) {
+//       width: 618px;
+//       display: flex;
+//     }
+//     @media screen and (min-width: 1024px) {
+//       width: 882px;
+//     }
+//   }
+
+//   // Close modal btn
+//   .modal-btn__close {
+//     display: block;
+//     position: absolute;
+//     top: 0;
+//     right: 0;
+//     border: none;
+//     width: 30px;
+//     height: 30px;
+//     opacity: 0.2;
+//   }
+// }
