--- a/src/sass/layouts/_scroll-to-top-btn.scss
+++ b/src/sass/layouts/_scroll-to-top-btn.scss
@@ -1,4 +1,4 @@
-.scrollToTopBtn {
+.scroll-to-top-btn {
   display: none;
   position: fixed;
   bottom: 30px;
@@ -17,12 +17,5 @@
     background-color: $footer-text-color;
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
       0px 1px 1px rgba(0, 0, 0, 0.12);
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .scrollToTopBtn {
-    opacity: 0;
-    transform: translateY(100px);
   }
 }
