--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -11,13 +11,27 @@
 }
 
 /* Backdrop */
-body.show-modal .backdrop {
+body.show-modal-film .backdrop {
   opacity: 1;
   visibility: visible;
-  pointer-events: initial; // изначальные установки (слушать)
+  pointer-events: initial;
 }
 
-body.show-modal .modal {
+body.show-modal-film .modal {
+  transform: scale(1);
+
+  @media screen and (max-width: 767px) {
+    background-color: $header-text-color;
+  }
+}
+
+body.show-modal-signup .backdrop {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+
+body.show-modal-signup .modal {
   transform: scale(1);
 }
 
@@ -30,91 +44,25 @@ body.show-modal .modal {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 999;
 
-  pointer-events: none; // не дает прокликнуть насквозь
+  pointer-events: none;
   opacity: 0;
-  visibility: hidden; // скрывает от читалок
+  visibility: hidden;
   transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
 }
 
 .modal {
-  padding: 24px;
-  border-radius: 4px;
-  max-width: 640px;
-  width: 100%;
-  min-height: 320px;
-  background-color: #fff;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-
+  overflow-y: scroll;
   transform: scale(1.1);
   transition: transform 200ms ease-in-out;
 }
 
-// === 1.0.0
-
-// .modal {
-//   // width: 100vw;
-//   overflow-y: scroll;
-
-//   @media screen and (max-width: 767px) {
-//     background-color: $header-text-color;
-//   }
-// }
-
-// // Section
-// .modal-section {
-//   display: flex;
-//   justify-content: center;
-//   padding-top: 20px;
-//   width: 100%;
-//   height: 100vh;
-
-//   @media screen and (max-width: 767px) {
-//     padding-left: 20px;
-//     padding-right: 20px;
-//     height: 100vh;
-//   }
-
-//   @media screen and (min-width: 768px) {
-//     padding-top: 60px;
-//     padding-bottom: 60px;
-//     margin-left: auto;
-//     margin-right: auto;
-//     width: 768px;
-//     height: auto;
-//     background-color: $header-text-color;
-//   }
-
-//   @media screen and (min-width: 1024px) {
-//     width: 1024px;
-//   }
-
-//   // Container
-//   .modal-container {
-//     @media screen and (min-width: 320px) {
-//       width: 280px;
-//     }
-//     @media screen and (min-width: 768px) {
-//       width: 618px;
-//       display: flex;
-//     }
-//     @media screen and (min-width: 1024px) {
-//       width: 882px;
-//     }
-//   }
-
-//   // Close modal btn
-//   .modal-btn__close {
-//     display: block;
-//     position: absolute;
-//     top: 0;
-//     right: 0;
-//     border: none;
-//     width: 30px;
-//     height: 30px;
-//     opacity: 0.2;
-//   }
-// }
+.close-modal {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+}
