--- a/src/js/templates/modal-film-markup.hbs
+++ b/src/js/templates/modal-film-markup.hbs
@@ -1,8 +1,7 @@
-<section class="modal-section">
+{{!-- <section class="modal-section"> --}}
     <div class="modal-container">
-
         <div class="modal-section__thumb">
-            <img class="modal-section__image" src="./images/modal-image.jpg" alt="some text">
+            <img class="modal-section__image" src="#" alt="some text">
         </div>
         <div class="modal-section__meta">
             <h2 class="modal-meta__title">A fistful of lead</h2>
@@ -35,8 +34,8 @@
                 <button type="button">add to Watched</button>
                 <button type="button">add to queue</button>
             </div>
-            <button class="modal-btn__close" type="button" data-close-modal>x</button>
+            {{!-- <button class="modal-btn__close" type="button" data-close-modal>x</button> --}}
         </div>
-
     </div>
-</section>
+    {{!--
+</section> --}}
