--- a/src/sass/layouts/_login-signup.scss
+++ b/src/sass/layouts/_login-signup.scss
@@ -19,6 +19,20 @@ a {
   text-decoration: none;
 }
 
+// Form Wrapper
+.modal-form__wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding-top: 60px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 60px;
+  width: 100vw;
+  max-width: 440px;
+}
+
 /* buttons */
 #signupForm-js > button {
   background: var(--secondary);
@@ -44,13 +58,18 @@ a {
 
 /* forms */
 form#signupForm-js {
-  max-width: 400px;
-  margin: 0 auto;
+  // max-width: 400px;
+  // margin: 0 auto;
+  width: 100%;
   padding: 30px;
   border-radius: 8px;
   box-shadow: 1px 2px 3px rgba(50, 50, 50, 0.05);
   border: 1px solid var(--secondary);
   background: white;
+
+  // @media screen and (min-width: 320px) {
+  //   max-width: 320px;
+  // }
 }
 #signupForm-js > input {
   border: 0;
