--- a/src/sass/layouts/_main.scss
+++ b/src/sass/layouts/_main.scss
@@ -2,6 +2,18 @@
   padding-top: 20px;
 }
 
+///////////////////////////////////////
+/*Скрываем скролл до конца страницы*/
+// a.tui-page-btn.tui-last,
+// a.tui-page-btn.tui-first,
+// span.tui-page-btn.tui-is-disabled.tui-first {
+//   visibility: hidden;
+// }
+//////////////////////////////////////
+.tui-pagination.pagination {
+  margin-top: 45px;
+}
+
 .film-list-img {
   max-width: 100%;
   // max-height: 400px;
