--- a/src/sass/layouts/_my-lib.scss
+++ b/src/sass/layouts/_my-lib.scss
@@ -21,24 +21,37 @@
   }
 
   @media screen and (min-width: 768px) {
-    width: 618px;
+    width: 648px;
   }
 
   @media screen and (min-width: 1024px) {
-    width: 882px;
+    width: 912px;
   }
 }
 
 .my-library__list {
+  @media screen and (min-width: 320px) {
+    margin-bottom: 40px;
+  }
+
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 50px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 46px;
   }
 }
 
 .my-library__item {
+  cursor: pointer;
+
   @media screen and (min-width: 320px) {
-    margin-bottom: 20px;
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
   }
 
   @media screen and (min-width: 768px) {
@@ -49,7 +62,6 @@
 
   @media screen and (min-width: 1024px) {
     width: calc((100% - 3 * 30px) / 3);
-    margin: 15px;
   }
 }
 
@@ -76,6 +88,7 @@
 .my-library__movie-title {
   font-weight: 500;
   font-size: $primary-font-size;
+  color: $main-text-color;
   line-height: 1.33;
   text-transform: uppercase;
 }
