--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -110,7 +110,7 @@ a {
 
   @media screen and (min-width: 1024px) {
     max-width: 1024px;
-    padding-left: 15pxk;
+    padding-left: 15px;
     padding-right: 15px;
   }
 }
