--- a/src/sass/layouts/_header-home.scss
+++ b/src/sass/layouts/_header-home.scss
@@ -26,7 +26,7 @@
   position: relative;
   margin: 0 auto;
   margin-bottom: 22px;
-  width: 280px;
+  // width: 280px;
 
   @media screen and (min-width: 768px) {
     width: 336px;
@@ -92,4 +92,3 @@
     text-align: center;
   }
 }
-
