--- a/src/js/templates/mainCards.hbs
+++ b/src/js/templates/mainCards.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
-<li class="film-list-li">
-    <a href="#" class="movie-link" data-id="{{id}}">
+<li class="film-list-li" data-id="{{id}}">
+    
         <div class="film-list-block-img">
             <img class="film-list-img" src="https://image.tmdb.org/t/p/w300/{{poster_path}}" alt="{{name}}{{title}} ">
         </div>
@@ -9,6 +9,6 @@
             <p class="film-list-movie-genre">{{genre_ids}} | {{release_date}}</p>
         </div>
         
-    </a>
+    
 </li>
 {{/each}}
