--- a/src/js/templates/mainCards.hbs
+++ b/src/js/templates/mainCards.hbs
@@ -1,11 +1,12 @@
 {{#each this}}
-<li class="film-list-li" data-id="{{id}}">
-        <div class="film-list-block-img" data-id="{{id}}>
-            <img class="film-list-img" src="https://image.tmdb.org/t/p/w300/{{poster_path}}" alt="{{name}}{{title}}" data-id="{{id}}>
-        </div>
-        <div class="film-list-movie-description" data-id="{{id}}">
-            <h3 class="film-list-movie-title" data-id="{{id}}">{{upper title}}{{upper name}} </h3>
-            <p class="film-list-movie-genre" data-id="{{id}}">{{genre_ids}} | {{release_date}} </p>
-        </div>
+<img src="./images/1.jpg" alt="111">
+<li class="film-list-li">
+    <div class="film-list-block-img" data-id="{{id}}">
+        <img class="film-list-img" src="{{poster_path}}" alt="{{name}}{{title}}" data-id="{{id}}">
+    </div>
+    <div class="film-list-movie-description" data-id="{{id}}">
+        <h3 class="film-list-movie-title" data-id="{{id}}">{{upper title}}{{upper name}} </h3>
+        <p class="film-list-movie-genre" data-id="{{id}}">{{genre_ids}} | {{release_date}} </p>
+    </div>
 </li>
 {{/each}}
