--- a/src/sass/layouts/_main.scss
+++ b/src/sass/layouts/_main.scss
@@ -56,7 +56,14 @@
   border: 0;
   clip: rect(0 0 0 0);
 }
-
+body {
+  // background-color: bisque;
+  // background-color: #f2f2f2;
+  background-color: rgba(0, 0, 0, 0.08);
+}
+.js-section-film {
+  background-color: whitesmoke;
+}
 .js-section-film {
   // background-color: aqua;
   margin-left: auto;
@@ -84,7 +91,7 @@
     justify-content: space-between;
   }
   .js-section-film {
-    width: 1024px;
+    max-width: 1024px;
     padding-left: 70px;
     padding-right: 70px;
     padding-bottom: 60px;
