adds event to the card

--- a/src/js/templates/modal-film-markup.hbs
+++ b/src/js/templates/modal-film-markup.hbs
@@ -39,3 +39,35 @@
     </div>
     {{!--
 </section> --}}
+
+{{!-- {{#each this}}
+<div class="modal-container">
+    <div class="modal-section__thumb">
+        <img class="modal-section__image" src="https://image.tmdb.org/t/p/w300{{poster_path}}"
+            alt="{{title}}{{name}} poster">
+    </div>
+    <div class="modal-section__meta">
+        <h2 class="modal-meta__title">{{title}}{{name}}</h2>
+        <div class="modal-meta__info">
+            <ul class="modal-info__list">
+                <li>Vote / Votes</li>
+                <li>Popularity</li>
+                <li>Original Title</li>
+                <li>Genre</li>
+            </ul>
+            <ul class="modal-info__list">
+                <li><span>{{vote_average}}</span>/<span>{{vote_count}}</span></li>
+                <li>{{popularity}}</li>
+                <li>{{original_title}}{{original_name}}</li>
+                <li>{{genre_ids}}</li>
+            </ul>
+        </div>
+        <h3 class="modal-meta__title description">About</h3>
+        <p class="modal-meta__text">{{overview}}</p>
+        <div class="modal-meta__btn-wrap">
+            <button type="button">add to Watched</button>
+            <button type="button">add to queue</button>
+        </div>
+    </div>
+</div>
+{{/each}} --}}
