функция поиска фильма по id

--- a/src/js/templates/singleFilm.hbs
+++ b/src/js/templates/singleFilm.hbs
@@ -1,4 +1,4 @@
-{{#each this}}
+{{!-- {{#each this}} --}}
 {{!-- <article>
     <img src="https://image.tmdb.org/t/p/w300{{poster_path}}" alt="{{title}}{{name}} poster">
     <h2>{{title}}{{name}}</h2>
@@ -36,4 +36,4 @@
         <button type="button">add to queue</button>
     </div>
 </div>
-{{/each}}
+{{!-- {{/each}} --}}
