--- a/src/js/templates/mainCards.hbs
+++ b/src/js/templates/mainCards.hbs
@@ -5,7 +5,7 @@
             <img class="film-list-img" src="{{poster_path}}" alt="{{name}}{{title}}"
                 data-id="{{id}}">
         </div>
-        <div class="show-movie-card-buttons"><button class="button movie-card-btn">add to watched</button><button
+        <div class="show-movie-card-buttons" data-id="{{id}}"><button class="button movie-card-btn">add to watched</button><button
                 class="button movie-card-btn">add to
                 queue</button></div>
         <div class="film-list-movie-description" data-id="{{id}}">
