--- a/src/js/templates/singleFilm.hbs
+++ b/src/js/templates/singleFilm.hbs
@@ -1,5 +1,5 @@
 <div class="modal-section__thumb">
-    <img class="modal-section__image" src="https://image.tmdb.org/t/p/w300{{poster_path}}"
+    <img class="modal-section__image" src="{{poster_path}}"
         alt="{{title}}{{name}} poster" />
 </div>
 <div class="modal-section__meta">
