added modal-window with trailer

--- a/src/main.scss
+++ b/src/main.scss
@@ -8,5 +8,6 @@
 @import './sass/layouts/main';
 @import './sass/layouts/modal';
 @import './sass/layouts/modal-film-markup';
+@import './sass/layouts/modal-trailer';
 @import './sass/layouts/scroll-to-top-btn';
 @import './sass/layouts/footer';
