добавил альтернативный рендер разметки фильма через GET запрос

--- a/src/js/templates/singleFilm.hbs
+++ b/src/js/templates/singleFilm.hbs
@@ -1,6 +1,7 @@
 <div class="modal-section__thumb">
-    <img class="modal-section__image" src="{{poster_path}}"
-        alt="{{title}}{{name}} poster" />
+    {{!-- <img class="modal-section__image" src="https://image.tmdb.org/t/p/w500/{{poster_path}}"
+        alt="{{title}}{{name}} poster" /> --}}
+    <img class="modal-section__image" src="{{poster_path}}" alt="{{title}}{{name}} poster" />
 </div>
 <div class="modal-section__meta">
     <h2 class="modal-meta__title">{{title}}{{name}}</h2>
