--- a/src/sass/layouts/_modal-trailer.scss
+++ b/src/sass/layouts/_modal-trailer.scss
@@ -16,36 +16,78 @@
   left: 0;
   right: 0;
   bottom: 0;
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
 
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-youtube__window {
-  width: 882px;
-
-  margin: 150px auto;
+  @media screen and (min-width: 320px) {
+    width: 280px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 611px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 882px;
+  }
 }
 
 .modal-youtube__frame {
-  width: 882px;
-  height: 514px;
+  @media screen and (min-width: 320px) {
+    width: 280px;
+    height: 220px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 611px;
+    height: 456px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 882px;
+    height: 514px;
+  }
 }
 
 .modal-youtube__close {
   position: absolute;
-  right: 50px;
   top: 20px;
 
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
 
   background-color: rgba(255, 244, 244, 0.74);
   border-radius: 50%;
-  font-size: 42px;
+
   color: black;
 
   cursor: pointer;
+
+  @media screen and (min-width: 320px) {
+    right: 15px;
+
+    width: 20px;
+    height: 20px;
+
+    font-size: 25px;
+  }
+  @media screen and (min-width: 768px) {
+    right: 25px;
+
+    width: 35px;
+    height: 35px;
+
+    font-size: 36px;
+  }
+  @media screen and (min-width: 1024px) {
+    right: 50px;
+
+    width: 50px;
+    height: 50px;
+
+    font-size: 42px;
+  }
 }
