--- a/src/js/templates/mainCards.hbs
+++ b/src/js/templates/mainCards.hbs
@@ -6,8 +6,8 @@
                 data-id="{{id}}">
         </div>
         <div data-id="{{id}}" class="show-movie-card-buttons">
-            <button class="button movie-card-btn">add to watched</button>
-            <button class="button movie-card-btn">add to queue</button>
+            <button class="button movie-card-btn" data-id="{{id}}" data-watched="queue">add to watched</button>
+            <button class="button movie-card-btn" data-id="{{id}}" data-queue="queue">add to queue</button>
         </div>
         <div class="film-list-movie-description" data-id="{{id}}">
             <h3 class="film-list-movie-title" data-id="{{id}}">{{upper title}}{{upper name}} </h3>
