--- a/src/sass/layouts/_modal-film-markup.scss
+++ b/src/sass/layouts/_modal-film-markup.scss
@@ -7,7 +7,7 @@
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
-    height: 100vh;
+    // height: 100vh;
   }
 
   @media screen and (min-width: 320px) {
