поставил иконку play на постер фильма

--- a/src/sass/layouts/_modal-film-markup.scss
+++ b/src/sass/layouts/_modal-film-markup.scss
@@ -53,6 +53,18 @@
     align-items: center;
   }
 
+  .trailer-btn {
+    display: none;
+    font-size: 36px;
+  }
+
+  &:hover {
+    .trailer-btn {
+      position: absolute;
+      display: block;
+    }
+  }
+
   .modal-section__image {
     width: 100%;
     height: auto;
