--- a/src/js/templates/modal-film-markup.hbs
+++ b/src/js/templates/modal-film-markup.hbs
@@ -2,6 +2,9 @@
     <div class="modal-section__thumb">
         <img class="modal-section__image" src="{{poster_path}}" alt="{{title}}{{name}} poster"
             alt="{{title}}{{name}} poster">
+        <span class="material-icons trailer-btn">
+            play_circle_outline
+        </span>
     </div>
     <div class="modal-section__meta">
         <h2 class="modal-meta__title">{{title}}{{name}}</h2>
