--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -70,21 +70,22 @@
 /*-----------footer-modal---------------*/
 
 .footer-modal-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 20px;
+  padding: 10px;
   color: $footer-text-color;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.17;
   background-color: $footer-background-color;
   border-radius: 4px;
-  min-width: 280px;
-  min-height: 400px;
+  min-width: 300px;
+
+  @media screen and (min-width: 768px) {
+    min-width: 600px;
+    padding: 20px 20px 30px 20px;
+  }
 }
 .footer-modal-title {
+  padding-top: 50px;
   padding-bottom: 20px;
   text-align: center;
   font-size: 20px;
@@ -116,6 +117,7 @@
 .footer-modal-teammates-description {
   font-size: 14px;
   text-align: left;
+  text-indent: 10px;
 }
 .footer-modal-wrapper {
   display: flex;
