--- a/src/main.css
+++ b/src/main.css
@@ -788,6 +788,30 @@ form#login-form {
 }
 
 /* Backdrop */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1001;
+  overflow-y: scroll;
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+}
+
+@media screen and (min-width: 768px) {
+  .backdrop {
+    align-items: center;
+  }
+}
+
 body.show-modal-film, body.show-modal-signup, body.show-modal-footer {
   overflow: hidden;
 }
@@ -822,35 +846,11 @@ body.show-modal-film .modal {
   }
 }
 
-.backdrop {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 1001;
-  overflow-y: scroll;
-  pointer-events: none;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
-}
-
-@media screen and (min-width: 768px) {
-  .backdrop {
-    align-items: center;
-  }
-}
-
 .modal {
   display: flex;
   justify-content: center;
   transform: scale(1.1);
-  transition: transform 200ms ease-in-out;
+  transition: transform 300ms ease-in-out;
 }
 
 .close-modal {
@@ -899,12 +899,12 @@ body.show-modal-film .modal {
 }
 
 .modal-section__thumb {
-  height: 416px;
   border-radius: 5px;
 }
 
 @media screen and (max-width: 767px) {
   .modal-section__thumb {
+    height: 416px;
     margin-bottom: 30px;
   }
 }
@@ -913,7 +913,6 @@ body.show-modal-film .modal {
   .modal-section__thumb {
     margin-right: 30px;
     width: 294px;
-    height: 416px;
   }
 }
 
