--- a/src/sass/layouts/_modal-film-markup.scss
+++ b/src/sass/layouts/_modal-film-markup.scss
@@ -30,19 +30,19 @@
   }
 }
 
-// Image
+// Poster
 .modal-section__thumb {
-  height: 416px;
   border-radius: 5px;
 
   @media screen and (max-width: 767px) {
+    height: 416px;
     margin-bottom: 30px;
   }
 
   @media screen and (min-width: 768px) {
     margin-right: 30px;
     width: 294px;
-    height: 416px;
+    // height: 416px;
   }
 
   @media screen and (min-width: 1024px) {
@@ -53,6 +53,7 @@
     align-items: center;
   }
 
+  // Image
   .modal-section__image {
     width: 100%;
     height: auto;
