--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -5,6 +5,36 @@
 }
 
 /* Backdrop */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // width: 100vw;
+  // height: 100vh;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+
+  z-index: 1001;
+  overflow-y: scroll;
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+
+  // @media screen and (max-width: 414px) {
+  //   background-color: $header-text-color;
+  // }
+
+  @media screen and (min-width: 768px) {
+    align-items: center;
+  }
+}
+
 body {
   &.show-modal-film,
   &.show-modal-signup,
@@ -41,38 +71,11 @@ body {
   }
 }
 
-.backdrop {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.7);
-
-  z-index: 1001;
-  overflow-y: scroll;
-  pointer-events: none;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
-
-  // @media screen and (max-width: 414px) {
-  //   background-color: $header-text-color;
-  // }
-
-  @media screen and (min-width: 768px) {
-    align-items: center;
-  }
-}
-
 .modal {
   display: flex;
   justify-content: center;
   transform: scale(1.1);
-  transition: transform 200ms ease-in-out;
+  transition: transform 300ms ease-in-out;
 }
 
 .close-modal {
