--- a/src/sass/layouts/_main.scss
+++ b/src/sass/layouts/_main.scss
@@ -10,7 +10,7 @@
 //   visibility: hidden;
 // }
 //////////////////////////////////////
-.tui-pagination.pagination {
+#tui-pagination-container {
   margin-top: 45px;
 }
 
