--- a/src/js/templates/my-library.hbs
+++ b/src/js/templates/my-library.hbs
@@ -1,10 +1,12 @@
 {{#each this}}
 <li class="my-library__item" data-id="{{id}}">
-    <img class="my-library__movie-poster" src="https://image.tmdb.org/t/p/w500{{this.poster_path}}"
-        alt="{{title}} {{name}}" data-id="{{id}}">
-    <p class="my-library__movie-title" data-id="{{id}}">{{title}} {{name}}</br>
-        <span class="my-library__movie-info">{{genre_ids}} | {{first_air_date}} {{release_date}}</span>
-        <span class="my-library__movie-rate">{{vote_average}}</span>
-    </p>
+    <a href="#" class="movie-link" data-id="{{id}}">
+        <img class="my-library__movie-poster" src="{{this.poster_path}}"
+            alt="{{title}} {{name}}" data-id="{{id}}">
+        <p class="my-library__movie-title" data-id="{{id}}">{{title}} {{name}}</br>
+            <span class="my-library__movie-info">{{genre_ids}} | {{first_air_date}} {{release_date}}</span>
+            <span class="my-library__movie-rate">{{vote_average}}</span>
+        </p>
+    </a>
 </li>
 {{/each}}
