--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -53,6 +53,19 @@ a {
   text-decoration: none;
 }
 
+.link-header {
+  border-radius: 5px;
+  outline: none;
+
+  &:hover,
+  &:focus {
+    background-color: #ff6b01;
+    border-color: #ff6b08;
+    color: #ffffff;
+    box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
+    border-radius: 5px;
+  }
+}
 .button {
   display: inline-block;
   padding: 14px 10px 12px;
