adds a trailer modal

--- a/src/js/templates/modal-film-markup.hbs
+++ b/src/js/templates/modal-film-markup.hbs
@@ -1,4 +1,7 @@
 <div class="modal-container">
+    <div class="modal-content__trailer">
+        <button type="button" class="modal-content__trailer-btn"></button>
+    </div>
     <div class="modal-section__thumb">
         <div class="trailer-btn__overlay">
             <span class="material-icons trailer-btn">
