--- a/src/sass/layouts/_modal-film-markup.scss
+++ b/src/sass/layouts/_modal-film-markup.scss
@@ -1,4 +1,5 @@
 .modal-container {
+  position: relative;
   background-color: $header-text-color;
 
   @media screen and (max-width: 767px) {
@@ -25,6 +26,50 @@
     padding-left: 71px;
     padding-right: 71px;
     width: 1024px;
+  }
+}
+
+// Trailer
+.modal-content__trailer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: $main-text-color;
+  visibility: hidden;
+  z-index: 1002;
+  transform: scale(0.9);
+  transition: opacity var(--animation-duration) var(--timing-function),
+    transform var(--animation-duration) var(--timing-function),
+    visibility var(--animation-duration) var(--timing-function);
+
+  &.show-trailer-modal {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity var(--animation-duration) var(--timing-function),
+      transform var(--animation-duration) var(--timing-function);
+  }
+
+  .modal-content__trailer-btn {
+    width: 40px;
+    height: 40px;
+    background-color: red;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+    transform: scale(1);
+    transition: transform var(--animation-duration) var(--timing-function);
+
+    &:hover {
+      transform: scale(1.5);
+      transition: transform var(--animation-duration) var(--timing-function);
+    }
   }
 }
 
