--- a/src/js/templates/modal-film-markup.hbs
+++ b/src/js/templates/modal-film-markup.hbs
@@ -33,5 +33,9 @@
             <button type="button">add to Watched</button>
             <button type="button">add to queue</button>
         </div>
+        <div class="modal-meta_similar-movies">
+            <h3>Similar Movies</h3>
+            <ul class="modal-meta_similar-movies-list film-list js-ul-film"></ul>
+        </div>
     </div>
 </div>
