--- a/src/js/templates/modal-login-markup.hbs
+++ b/src/js/templates/modal-login-markup.hbs
@@ -1,9 +1,20 @@
-<div class="modal-form__wrap">
     <form id="login-form">
-        <h3>Log in</h3>
-        <input type="email" name="email" placeholder="Email" id="login-email" required />
-        <input type="password" name="password" placeholder="Password" id="login-password" required />
-        <div class="error-login error"></div>
-        <button id="login-btn">Log in</button>
+      <h3>Log in</h3>
+
+      <input
+        type="email"
+        name="email"
+        placeholder="Email"
+        id="login-email"
+        required
+      />
+      <input
+        type="password"
+        name="password"
+        placeholder="Password"
+        id="login-password"
+        required
+      />
+      <div class="error-login error"></div>
+      <button id="login-btn">Log in</button>
     </form>
-</div>
