--- a/src/js/templates/modal-signup-markup.hbs
+++ b/src/js/templates/modal-signup-markup.hbs
@@ -1,11 +1,26 @@
-<div class="modal-form__wrap">
-    <form class="signupForm" id="signup-form">
-        <h3>Sign up</h3>
-        <input type="text" name="displayName" placeholder="Display Name" id="displayName-js" />
-        <input type="email" name="email" placeholder="Email" id="email-js" />
-        <input type="password" name="password" placeholder="Password" id="password-js" />
-        <!-- <div v-if="error" class="error">{{ error }}</div> -->
-        <button id="signupBtn-js">Sign up</button>
-        <!-- <button v-if="isPending" disabled>Loading...</button> -->
+    <form id="signup-form">
+      <h3>Sign up</h3>
+      <input
+        type="text"
+        name="displayName"
+        placeholder="Display Name"
+        id="signup-displayName"
+        required
+      />
+      <input
+        type="email"
+        name="email"
+        placeholder="Email"
+        id="signup-email"
+        required
+      />
+      <input
+        type="password"
+        name="password"
+        placeholder="Password"
+        id="signup-password"
+        required
+      />
+      <div class="error-signup error"></div>
+      <button id="signup-btn">Sign up</button>
     </form>
-</div>
