--- a/src/main.scss
+++ b/src/main.scss
@@ -12,3 +12,4 @@
 @import './sass/layouts/trailer-notification';
 @import './sass/layouts/scroll-to-top-btn';
 @import './sass/layouts/footer';
+@import './sass/layouts/tui-pagination';
