--- a/src/js/templates/modal-signup-markup.hbs
+++ b/src/js/templates/modal-signup-markup.hbs
@@ -1,3 +1,4 @@
+         <div class="welcome container">
     <form id="signup-form">
       <h3>Sign up</h3>
       <input
@@ -23,4 +24,8 @@
       />
       <div class="error-signup error"></div>
       <button id="signup-btn">Sign up</button>
+      <p>
+        Already registered? <span data-click="click-login">Login</span> instead.
+      </p>
     </form>
+      </div>
