--- a/src/main.scss
+++ b/src/main.scss
@@ -11,3 +11,4 @@
 @import './sass/layouts/modal-trailer';
 @import './sass/layouts/scroll-to-top-btn';
 @import './sass/layouts/footer';
+@import './sass/layouts/pagination';
