--- a/src/main.scss
+++ b/src/main.scss
@@ -13,4 +13,4 @@
 @import './sass/layouts/scroll-to-top-btn';
 @import './sass/layouts/footer';
 @import './sass/layouts/pagination';
-@import './sass/layouts/tui-pagination';
+// @import './sass/layouts/tui-pagination';
