--- a/src/main.scss
+++ b/src/main.scss
@@ -13,4 +13,5 @@
 @import './sass/layouts/scroll-to-top-btn';
 @import './sass/layouts/footer';
 @import './sass/layouts/pagination';
+@import './sass/layouts/switchTheme';
 // @import './sass/layouts/tui-pagination';
