--- a/src/js/templates/modal-login-markup.hbs
+++ b/src/js/templates/modal-login-markup.hbs
@@ -1,29 +1,17 @@
-   
-     <div class="welcome container">
+<div class="modal-form__wrap">
+  <div class="welcome container">
 
-      <form id="login-form">
+    <form id="login-form">
       <h3>Log in</h3>
 
-      <input
-        type="email"
-        name="email"
-        placeholder="Email"
-        id="login-email"
-        data-email="email"
-        required
-      />
-      <input
-        type="password"
-        name="password"
-        placeholder="Password"
-        id="login-password"
-        required
-      />
+      <input type="email" name="email" placeholder="Email" id="login-email" data-email="email" required />
+      <input type="password" name="password" placeholder="Password" id="login-password" required />
       <div class="error-login error"></div>
       <button id="login-btn">Log in</button>
-  
+
       <p>
-        No account yet? <span  data-click="click-signup">Signup</span> instead.
+        No account yet? <span data-click="click-signup">Signup</span> instead.
       </p>
-        </form>
-      </div>
+    </form>
+  </div>
+</div>
