--- a/src/js/templates/modal-signup-markup.hbs
+++ b/src/js/templates/modal-signup-markup.hbs
@@ -1,31 +1,15 @@
-         <div class="welcome container">
+<div class="modal-form__wrap">
+  <div class="welcome container">
     <form id="signup-form">
       <h3>Sign up</h3>
-      <input
-        type="text"
-        name="displayName"
-        placeholder="Display Name"
-        id="signup-displayName"
-        required
-      />
-      <input
-        type="email"
-        name="email"
-        placeholder="Email"
-        id="signup-email"
-        required
-      />
-      <input
-        type="password"
-        name="password"
-        placeholder="Password"
-        id="signup-password"
-        required
-      />
+      <input type="text" name="displayName" placeholder="Display Name" id="signup-displayName" required />
+      <input type="email" name="email" placeholder="Email" id="signup-email" required />
+      <input type="password" name="password" placeholder="Password" id="signup-password" required />
       <div class="error-signup error"></div>
       <button id="signup-btn">Sign up</button>
       <p>
         Already registered? <span data-click="click-login">Login</span> instead.
       </p>
     </form>
-      </div>
+  </div>
+</div>
