--- a/src/js/templates/modal-login-markup.hbs
+++ b/src/js/templates/modal-login-markup.hbs
@@ -27,7 +27,7 @@
 
     </button>
       <p>
-        No account yet? <span class="click-span"  data-toggleSignup="click-signup">Signup</span> instead.
+        No account yet? <span class="click-span"  data-toggle="signup">Signup</span> instead.
       </p>
       </div>
         </form>
