--- a/src/js/templates/modal-signup-markup.hbs
+++ b/src/js/templates/modal-signup-markup.hbs
@@ -30,7 +30,7 @@
 
     </button>
       <p>
-        Already registered? <span class="click-span" data-toggleLogin="click-login" >Login</span> instead.
+        Already registered? <span class="click-span" data-toggle="login" >Login</span> instead.
       </p>
       </div>
     </form>
